# activity-tracker

./: Activity.cpp  Activity.h  AddActivityDialog.cpp  AddActivityDialog.h  CMakeLists.txt  MainController.cpp  MainController.h  MainFrame.cpp  MainFrame.h  MainView.cpp  MainView.h  Register.cpp  Register.h  SearchActivityController.cpp  SearchActivityController.h  SearchActivityDialog.cpp  SearchActivityDialog.h  main.cpp
test/: ActivityTest.cpp  ActivityTracker - collegamento.lnk  CMakeLists.txt  RegisterTest.cpp
test/lib/googletest/docs/: googletest - collegamento.lnk
